--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     name: Detect Changes
     runs-on: ubuntu-latest
     outputs:
-      core: ${{ steps.filter.outputs.core }}
+      python: ${{ steps.filter.outputs.python }}
       jobs: ${{ steps.filter.outputs.jobs }}
       infra: ${{ steps.filter.outputs.infra }}
     steps:
@@ -49,8 +49,8 @@ jobs:
         id: filter
         with:
           filters: |
-            core:
-              - 'src/core/**'
+            python:
+              - 'src/jobs/**'
               - 'pyproject.toml'
               - 'tests/**'
             jobs:
@@ -63,7 +63,7 @@ jobs:
   test:
     name: Lint & Unit Tests
     needs: changes
-    if: needs.changes.outputs.core == 'true' || needs.changes.outputs.jobs == 'true'
+    if: needs.changes.outputs.python == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -106,32 +106,6 @@ jobs:
         with:
           name: test-results
           path: reports/junit.xml
-
-  # ── Build Wheel (only when core library changed) ────────────────
-  build:
-    name: Build Wheel
-    needs: [changes, test]
-    if: needs.changes.outputs.core == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4
-
-      - name: Setup Python
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065  # v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Build wheel
-        run: |
-          pip install build
-          python -m build --wheel --outdir dist/
-
-      - name: Upload wheel artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4
-        with:
-          name: wheel
-          path: dist/*.whl
 
   # ── Terraform Validate (only when infra changed) ────────────────
   terraform-validate:
@@ -201,8 +175,7 @@ jobs:
     name: Security Scan
     needs: changes
     if: |
-      needs.changes.outputs.core == 'true'  ||
-      needs.changes.outputs.jobs == 'true'  ||
+      needs.changes.outputs.python == 'true'  ||
       needs.changes.outputs.infra == 'true'
     runs-on: ubuntu-latest
     steps:
@@ -220,39 +193,17 @@ jobs:
 
       # ─ SCA: Python dependency CVE scan ───────────────────────────
       - name: Install project dependencies
-        if: needs.changes.outputs.core == 'true'
+        if: needs.changes.outputs.python == 'true'
         run: pip install --quiet -e '.[dev]'
 
       - name: pip-audit (dependency CVE scan)
-        if: needs.changes.outputs.core == 'true'
+        if: needs.changes.outputs.python == 'true'
         run: pip-audit
-
-      # ─ SBOM: Software Bill of Materials ──────────────────────────
-      # cyclonedx-bom and checkov declare conflicting version ranges for
-      # cyclonedx-python-lib. Installing cyclonedx-bom into the shared
-      # environment upgrades that library and removes the Tool symbol that
-      # checkov imports, causing an ImportError at runtime.
-      # Fix: run cyclonedx-bom inside a dedicated throwaway venv so its
-      # dependency resolution never touches the checkov installation.
-      - name: Generate SBOM
-        if: needs.changes.outputs.core == 'true'
-        run: |
-          python -m venv /tmp/sbom-venv
-          /tmp/sbom-venv/bin/pip install --quiet cyclonedx-bom
-          /tmp/sbom-venv/bin/cyclonedx-py environment --of json --output-file sbom.json
-
-      - name: Upload SBOM artefact
-        if: needs.changes.outputs.core == 'true'
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4
-        with:
-          name: sbom
-          path: sbom.json
-          retention-days: 90
 
       # ─ SAST: Python static analysis ──────────────────────────────
       - name: bandit (Python SAST)
-        if: needs.changes.outputs.core == 'true' || needs.changes.outputs.jobs == 'true'
-        run: bandit -r src/ -ll -ii
+        if: needs.changes.outputs.python == 'true'
+        run: bandit -r src/jobs/ tests/ -ll -ii
         # -ll = medium+ severity, -ii = medium+ confidence
         # Accepted false positives are suppressed via .bandit (skip=B608)
         # and inline # nosec annotations. Failing this step blocks the PR.
